Solution description in progress
Code refactoring in DependencyGraphTest.java